--- a/react/src/__autoGenerated/nijo-default-style.css
+++ b/react/src/__autoGenerated/nijo-default-style.css
@@ -24,7 +24,7 @@ body {
 
 /* tailwind */
 .page-content-root {
-  @apply flex flex-col justify-start h-full space-y-1 overflow-auto;
+  @apply flex flex-col justify-start h-full overflow-auto;
 }
 
 .ellipsis-ex {
@@ -222,6 +222,16 @@ button[type="reset"].bg-color-button {
 
 .bg-color-selected-svg {
   @apply fill-black dark:fill-white opacity-25;
+}
+
+.border-vform {
+  /* neutral-200 */
+  box-shadow: 0 0 0 1px #e5e5e5;
+}
+
+.dark .border-vform {
+  /* neutral-800 */
+  box-shadow: 0 0 0 1px #262626;
 }
 
 /* react-simplemde-editor, easymde 用の設定 */
